--- a/index.html
+++ b/index.html
@@ -6,33 +6,11 @@
         <link href="menu.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <svg xmlns="http://www.w3.org/2000/svg"  hidden>
-            <symbol id="arrow" viewbox="0 0 16 16" >
-                <polyline points="4 6, 8 10, 12 6" stroke="#000" stroke-width="2" fill="transparent" stroke-linecap="round" />
-            </symbol>
-        </svg>
-        
-        <!-- In the real world, all hrefs would have go to real, unique URLs, not a "#" -->
-        <nav id="site-navigation" class="site-navigation" aria-label="Clickable Menu Demonstration">
-            <ul class="main-menu clicky-menu no-js">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">
-                        Portfolio
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        About
-                    </a>
-                </li>
-            </ul>
-        </nav>
-            
-    </body>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Stage</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+       </body>
 </html>
