--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">News</a></li>
-          <li><a href="#">Stage</a></li>
+          <li><a href="Stage.html">Stage</a></li>
           <li><a href="#">About</a></li>
         </ul>
        </body>
