--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">News</a></li>
-          <li><a href="Stage.html">Stage</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#Stage">Stage</a></li>
+          <li><a href="#">About</a></li>          
         </ul>
+        <section id="Stage">
+            <h2>Introduction</h2>
+            <p>Je me présente Jérémy PARPETTE, j'ai 19 ans et je suis étudiant en BTS SIO seconde année</p>
+        </section>
        </body>
 </html>
