--- a/stages.html
+++ b/stages.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Stages</title>
-        <link href="stages.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <div class="main-container">
-            <h1>Mes Stages</h1>
+
+<head>
+    <meta charset="utf-8">
+    <title>Stages</title>
+    <link href="stages.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <div class="main-container">
+        <div class="container">
+            <div class="title-page">
+                <h1>Mes Stages</h1>
+            </div>
             <div class="p-stage">
                 <h2>Chez Elixir Créations - 16 mai au 1er juillet</h2>
                 <div class="logo-elixir">
                     <img src="elixir.png" alt="Logo d'Elixir Créations">
                 </div>
-                <p>Je réalise ma période de stage auprès de l'organisme Elixir Créations qui exerce en tant qu'agence web spécialisée dans les sites faits par des CMS (et plugins) dont Wordpress notamment.</p>
+                <p>Je réalise ma période de stage auprès de l'organisme Elixir Créations qui exerce en tant qu'agence web
+                spécialisée dans les sites faits par des CMS (et plugins) dont Wordpress notamment.</p>
                 <br>
                 <p>Pour ce qui est de mes missions parmi eux :</p>
                 <br>
                 <p>- Ils m'ont chargé de la maintenance de plusieurs sites en fabrication afin de les terminer, de corriger certaines erreurs ou de les améliorer.</p>
-                <br>
-                <p>- J'ai pu créé de toute pièce un site d'E-Commerce qui malheureusement n'a pas pu être terminé avant mon départ.</p>
-                <br>
-                <p>- J'ai pu brièvement touché au domaine du réseau par le biais d'O2Switch avec les certificats SSL, gestion des droits etecera..</p>
-
-            </div>            
-            <div class="d-stage">
-
+                <p>- J'ai pu créé de toute pièce un site d'E-Commerce qui malheureusement n'a pas pu être terminé avant mon
+                départ.</p>
+                <p>- J'ai pu brièvement touché au domaine du réseau par le biais d'O2Switch avec les certificats SSL,
+                gestion des droits etecera..</p>
             </div>
+        <div class="d-stage">
+
         </div>
-    </body>
+    </div>
+    </div>
+</body>
+
 </html>
