--- a/stages.html
+++ b/stages.html
@@ -29,10 +29,20 @@
                 <p>- J'ai pu brièvement touché au domaine du réseau par le biais d'O2Switch avec les certificats SSL,
                 gestion des droits etecera..</p>
             </div>
-        <div class="d-stage">
-
+            <div class="d-stage">
+                <h2>Chez Béal - 3 janvier au 10 février</h2>
+                <div class='logo-beal'>
+                    <img src="beal.png" alt="Logo de Béal">
+                </div>
+                <div class="contexte-entreprise">
+                    <p>J'ai été accepté en tant que Stagiaire du Service Informatique chez Béal.</p>
+                    <p>C'est une entreprise travaillant essentiellement dans la fabrication de cordes et d’équipements destinés à la grimpe (escalade et autres.).</p>
+                    <p>Elle est éparpillée un peu partout sur le globe avec des sites comme ceux implémentés en France à Vienne ou à Madagascar.</p>
+                    <p>C’est une entreprise de type SAS. Actuellement ils sont un peu plus d’une 50 d'employés dans la boite.</p>
+                    <br>
+                </div>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 
