--- a/stages.html
+++ b/stages.html
@@ -21,18 +21,15 @@
                 <p>Je réalise ma période de stage auprès de l'organisme Elixir Créations qui exerce en tant qu'agence web
                 spécialisée dans les sites faits par des CMS (et plugins) dont Wordpress notamment.</p>
                 <br>
-                <p>Pour ce qui est de mes missions parmi eux :</p>
-                <br>
-                <p>- Ils m'ont chargé de la maintenance de plusieurs sites en fabrication afin de les terminer, de corriger certaines erreurs ou de les améliorer.</p>
-                <p>- J'ai pu créé de toute pièce un site d'E-Commerce qui malheureusement n'a pas pu être terminé avant mon
-                départ.</p>
-                <p>- J'ai pu brièvement touché au domaine du réseau par le biais d'O2Switch avec les certificats SSL,
-                gestion des droits etecera..</p>
+                <p>Mes missions :</p>
+                <p>- Maintenance de plusieurs sites en cours</p>
+                <p>- Création d'un site d'E-Commerce.</p>
+                <p>- Gestion des droits, de certificats sur O2Switch</p>
             </div>
             <div class="d-stage">
                 <h2>Chez Béal - 3 janvier au 10 février</h2>
                 <div class='logo-beal'>
-                    <img src="beal.png" alt="Logo de Béal">
+                    <img src="beal-test.png" alt="Logo de Béal">
                 </div>
                 <div class="contexte-entreprise">
                     <p>J'ai été accepté en tant que Stagiaire du Service Informatique chez Béal.</p>
