--- a/stages.html
+++ b/stages.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Stages</title>
+    <title>Premier Stage</title>
     <link href="stages.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -11,34 +11,35 @@
     <div class="main-container">
         <div class="container">
             <div class="title-page">
-                <h1>Mes Stages</h1>
+                <h1>Premier Stage</h1>
             </div>
             <div class="p-stage">
-                <h2>Chez Elixir Créations - 16 mai au 1er juillet</h2>
+                <h1>Chez Elixir Créations - 16 mai au 1er juillet</h1>
                 <div class="logo-elixir">
                     <img src="elixir.png" alt="Logo d'Elixir Créations">
                 </div>
-                <p>Je réalise ma période de stage auprès de l'organisme Elixir Créations qui exerce en tant qu'agence web
-                spécialisée dans les sites faits par des CMS (et plugins) dont Wordpress notamment.</p>
+                <div class="contexte-p-stage">
+                    <h1>Contexte</h1>
+                </div>
+                <p>J'ai effectué mon premier stage au sein d'une agence web composée d'une petite équipe qui dispose de deux boîtes distinctes Elixir Créations et WebAtHeart, une sur Lyon et une sur Vienne.</p>
+                <p>J'y ai passé sept semaines au total dont majoritairement du télétravail et des échanges sur la plateforme Discord et/ou par email pour ce qui est des demandes journalières.</p>
                 <br>
-                <p>Mes missions :</p>
-                <p>- Maintenance de plusieurs sites en cours</p>
-                <p>- Création d'un site d'E-Commerce.</p>
-                <p>- Gestion des droits, de certificats sur O2Switch</p>
-            </div>
-            <div class="d-stage">
-                <h2>Chez Béal - 3 janvier au 10 février</h2>
-                <div class='logo-beal'>
-                    <img src="beal-test.png" alt="Logo de Béal">
+                <div class="missions-p-stage">
+                    <h1>Missions</h1>
                 </div>
-                <div class="contexte-entreprise">
-                    <p>J'ai été accepté en tant que Stagiaire du Service Informatique chez Béal.</p>
-                    <p>C'est une entreprise travaillant essentiellement dans la fabrication de cordes et d’équipements destinés à la grimpe (escalade et autres.).</p>
-                    <p>Elle est éparpillée un peu partout sur le globe avec des sites comme ceux implémentés en France à Vienne ou à Madagascar.</p>
-                    <p>C’est une entreprise de type SAS. Actuellement ils sont un peu plus d’une 50 d'employés dans la boite.</p>
-                    <br>
+                <h3>Maintenance de divers sites en fabrication.</h3>
+                <p>Par exemple, je me suis chargé de développer quelques fonctionnalités sur les sites sur lesquels on m'a chargé d'avancer dont ici Pascalis</p>
+                <p>Ci dessous, on m'avait demandé de les placer de sorte à ce qu'ils soient rangés en ligne de 4 et qu'on puisse les identifier (Prénom..)</p>
+                <img src="ajout-pascalis.png" />
+                <h3>Création d'un site d'E-Commerce.</h3>
+                <h3>Accès au domaine du réseau par le biais d'O2Switch avec les certificats SSL, Gestion des droits etecera..</h3>
+                <img src="Images/o2switch.png">
+                <div class="bilan">
+                    <h1>Bilan</h1>
                 </div>
+                <p>En conclusion, ça m'a beaucoup appris à travailler au sein d'un petit comité et à acquérir des connaissances sur des technologies que je ne connaissais pas forcément bien comme les extensions de WordPress (Oxygen, Divi, Elementor..)</p>
             </div>
+            
         </div>
     </div>
 </body>
