--- a/gedimagination.html
+++ b/gedimagination.html
@@ -35,15 +35,15 @@
                     <img src="Images/backlog.png">
                     <br>
                     <p>En premier, nous avons créé notre formulaire soit la partie web de notre jeu concours.</p>
-                    <img src="">
+                    <img src="Images/participation2.png">
 
                     <p>Afin de communiquer entre nos deux applications, on a du mettre en place une API pour qu'elle envoie les données enregistrées en BDD à l'application mobile pour le vote.</p>
-                    <img src="">
+                    <img src="Images/import gedimat.png">
 
                     <p>Pour se connecter à l'interface utilisateur, le votant doit entrer un code valide. Lors du vote, il a le choix entre trois réalisations et peut attribuer une note allant de 1 à 5. Ensuite, on retransmet les données insérées dans la BDD embarquée grâce à une autre API.</p>
-                    <img src="">
+                    <img src="Images/saisie code.png">
+                    <img src="Images/saisie vote.png">
                     <p>Grâce à tout ça, on peut générer un classement qui affiche les trois premiers du jeu concours.</p>
-                    <img src="">
                 </div>
                 <div class="bilan">
                     <h1>Bilan</h1>
