--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <span>2023-2024</span>
             <div class="content">
               <h3>Licence professionelle Dev Ops</h3>
+              <img src="Images/la doua campus.jpg">
               <p>
                 Ma poursuite d'étude envisagée pour l'année qui va suivre.
               </p>
@@ -80,6 +81,7 @@
             <span>2021-2023</span>
             <div class="content">
               <h3>BTS SIO Option SLAM</h3>
+              <img src="Images/ella fitzgerald.jpg">
               <p>
                 En cours de formation.
               </p>
@@ -89,6 +91,7 @@
             <span>2021</span>
             <div class="content">
               <h3>Baccalauréat STID2 option SIN</h3>
+              <img src="Images/galilee.jpg">
               <p>
                 Obtenu avec la mention assez bien.
               </p>
